[gd_scene load_steps=13 format=3 uid="uid://d3nfjg3wvu464"]

[ext_resource type="Script" uid="uid://dju8akq12h4vy" path="res://boah.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://ha76q3gcykab" path="res://Weeping Spector.png" id="2_kx0a8"]
[ext_resource type="Texture2D" uid="uid://cme3wd34bnbho" path="res://Boah-sheet.png" id="3_qi2p4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qi2p4"]
radius = 64.0

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("3_qi2p4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("3_qi2p4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("3_qi2p4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("3_qi2p4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("3_qi2p4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("3_qi2p4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxifv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}],
"loop": true,
"name": &"chase",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}],
"loop": true,
"name": &"idle",
"speed": 1.5
}]

[node name="Boah" type="CharacterBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_4gyqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4gyqm")

[node name="GhostBoah" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("2_kx0a8")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
simplify_epsilon = 0.1
debug_enabled = true

[node name="PathfindCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_qi2p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_dxifv")
animation = &"idle"
frame_progress = 0.74543303
offset = Vector2(0, -5)

[connection signal="timeout" from="PathfindCooldown" to="." method="_on_pathfind_cooldown_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
